css/style.css
/* ... */
.settingsTable {
  background: #12709e;
}

th {
  padding-right: 0;
  padding-left: 0;
  color: white;
  text-align: left;
  letter-spacing: 0;
}

.bodydiv {
  margin-top: 5px;
  margin-left: 15px;
  margin-right: 15px;
  margin-bottom: 50px;
}

@media only screen and (min-width: 1000px) {
  .bodydiv {
    margin-top: 5px;
    margin-left: 150px;
    margin-right: 150px;
    margin-bottom: 50px;
  }
}

.description {
  margin-top: 40px;
  margin-bottom: 30px;
  margin-left: 3%;
  margin-right: 3%;
  font-size: 12px;
}

.description p {
  margin-top: 0;
}

@media only screen and (min-width: 1000px) {
  .description {
    margin-top: 50px;
    margin-bottom: 30px;
    margin-left: 15%;
    margin-right: 15%;
  }
}

.description p {
  font-size: 16px;
  color: #5b5b5b;
}

.youdontknow tbody tr td {
  padding-right: 20px;
  padding-bottom: 5px;
}

.main-menu-link {
  text-decoration: none;
  color: #5b5b5b;
}

.main-menu {
  margin-top: 20px;
  padding-bottom: 20px;
  padding-top: 20px;
  outline-color: rgb(102, 102, 102);
  background-color: rgb(249, 249, 249);
  border-top-color: rgb(220, 220, 220);
  border-top: 1px solid #DCDCDC;
  border-bottom: 1px solid #DCDCDC;
}

.main-menu-text {
  margin-left: 15%;
  padding-bottom: 10px;
  padding-top: 10px;
  vertical-align: middle;
  line-height: 1px;
  /* the same as your div height */
}

.main-menu-text ul {
  list-style: none;
  position: relative;
  padding: 0;
  margin: 0;
}

.main-menu-text li {
  float: Left;
}

.main-menu-text a {
  padding-right: 20px;
}

input[type=checkbox] {
  position: absolute;
  top: -9999px;
  left: -9999px;
}

.smartphone-name {
  margin-top: 4px;
  text-align: center;
  font-size: 12px;
  font-weight: bold;
}

.qtip-img {
  height: auto;
  width: auto;
  max-width: 300px;
  max-height: 400px;
  display: block;
  cursor: pointer;
}

.accentColor {
  color: #12709e;
}

.heavy {
  font-weight: bold;
}

.logo {
  text-align: left;
  margin-left: 15%;
  margin-top: 10px;
  font-weight: bold;
}

.settingsdiv {
  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
  margin-top: 20px;
}

.settingsdiv thead>tr>th {
  font-weight: normal;
  vertical-align: top;
  padding: 8px;
  font-size: 18px;
  border-bottom: 1px solid #F0F0F0;
}

.settingsdiv tbody tr td {
  vertical-align: top;
  padding: 8px;
}

.filterdiv {
  border: 2px solid #12709e;
  margin-top: 20px;
  position: fixed;
  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
}

.itemsdiv {
  margin-top: 20px;
  margin-left: 180px;
  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
}

.subHeader {
  background: #12709e;
  color: white;
}

.itemsTable>tbody>tr {
  padding: 0;
}

.itemsTable>tbody>tr>td:first-child {
  color: #5b5b5b;
  font-weight: bold;
  border-right: 1px solid #F0F0F0;
}

.itemsTable>thead>tr>th:not(:empty) {
  vertical-align: top;
  padding: 8px;
  font-size: 18px;
  font-weight: bold;
  color: #5b5b5b;
}

.itemsTable>thead>tr>th {
  border-bottom: 1px solid #F0F0F0;
}

.itemsTable>thead>tr>th:first-child {
  border-right: 1px solid #F0F0F0;
}

.tryFiltering {
  font-size: 18px;
  font-weight: bold;
  color: #12709e;
}

.tryFiltering span {
  font-size: 28px;
  font-weight: bold;
  color: #12709e;
}

.filterselect {
  border-style: solid;
  background-color: white;
  font-size: 18px;
  width: 100%;
  color: #5b5b5b;
}

.detailwindow {
  padding-left: 6px;
  padding-right: 6px;
}

h3 {
  color: #5b5b5b;
  font-size: 16px;
  font-weight: normal;
  margin: 0;
  letter-spacing: .1px;
  font-family: 'Open Sans2', sans-serif;
}

.priceTiers {
  font-size: 18px;
  font-family: 'Open Sans2', sans-serif;
  letter-spacing: .1px;
  text-rendering: optimizeLegibility;
  padding-left: 8px;
  vertical-align: top;
}

.smartphonecells {
  vertical-align: top;
  padding-bottom: 15px;
  padding-left: 0;
  padding-right: 0;
}

.smallInput {
  width: 35px;
  float: left;
  border-width: 2px;
}

.rating {
  float: left;
}

.float {
  float: left;
}

.padding-none {
  padding: 0;
}

p {
  display: block;
  font-family: 'Open Sans2', sans-serif;
  font-size: 11px;
  letter-spacing: .1px;
}

h1, h2, h4 {
  margin: 0;
}

hr {
  margin-top: 0;
  margin-bottom: 0;
}

.rating {
  display: inline-block;
  overflow: hidden;
}

.rating-input {
  width: 16px;
  height: 16px;
  float: right;
  margin: 0 0 0 -16px;
  padding: 0;
  opacity: 0;
}

radio {
  width: 16px;
  height: 16px;
  margin: 0 0 0 -16px;
  padding: 0;
  opacity: 0;
}

.rating-star {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
}

.rating-input:checked~.rating-star, .rating-star:hover, .rating-star:hover~.rating-star {
  background-position: 0 0;
}

.rating-input:checked~.rating-star, .rating:hover .rating-star:hover, .rating:hover .rating-star:hover~.rating-star {
  background-position: 0 0;
}

.rating-star, .rating:hover .rating-star {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  background: url('../images/star.png') 0 -16px;
}

.a-icon-shop-now {
  left: 2px;
  top: 2px;
  position: absolute;
  height: 25px;
  width: 25px;
  background: 0 0;
  display: inline-block;
  vertical-align: top;
}

.a-button {
  background: #d8dde6;
  display: block;
  padding: 0;
  vertical-align: middle;
  height: 31px;
  *height: 29px;
  border: 1px solid;
  border-color: #bcc1c8 #bababa #adb2bb;
  text-align: center;
  overflow: hidden;
  text-decoration: none !important;
  cursor: pointer;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  width: 100%;
  max-width: 130px;
  box-sizing: border-box;
  margin-top: 11px;
}

.a-button-text {
  position: relative;
  text-decoration: none;
  z-index: 10;
  color: #111;
  font-size: 12px;
  text-align: center;
  line-height: 29px;
  display: block;
  font-family: Arial, sans-serif;
  white-space: nowrap;
  background-color: transparent;
  margin: 0;
  border: 0;
  outline: 0;
  padding: 0 2px 0 29px;
}
/* ... */

